--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -22,6 +22,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{float}
+\usepackage[caption = false]{subfig}
 \usepackage{fancybox}
 
 %\usepackage[backend=bibtex,hyperref=true,citestyle=authoryear,bibstyle=authortitle,firstinits=true,terseinits=true,doi=false,url=false,maxbibnames=10,maxcitenames=2]{biblatex}
@@ -135,6 +136,8 @@
 \newcommand{\TESS}{\texttt{TESS}\xspace}
 \newcommand{\Tracer}{\texttt{Tracer}\xspace}
 \newcommand{\TreePar}{\texttt{TreePar}\xspace}
+
+\newcommand{\COO}{CO\textsubscript{2}\xspace}
 
 
 \let\otheriint\iint
