--- a/tutorial_TeX/RB_DiversificationRate_Environmental_Tutorial/RB_DiversificationRate_Environmental_Tutorial.tex
+++ b/tutorial_TeX/RB_DiversificationRate_Environmental_Tutorial/RB_DiversificationRate_Environmental_Tutorial.tex
@@ -13,7 +13,7 @@
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Environmental Correlated Diversification Rate Estimation}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna}
+{\Large Sebastian H{\"o}hna and Luis Palazzesi}
 \vspace{1cm}
 \end{center}
 
