--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -136,6 +136,10 @@ John P. Huelsenbeck
 \def \ResourcePath {RB_DiversificationRate_Episodic_Tutorial/}
 \include{RB_DiversificationRate_Episodic_Tutorial/RB_DiversificationRate_Episodic_Tutorial_content}
 
+\chapter{Environmental-correlated Diversification Rate Estimation}
+\def \ResourcePath {RB_DiversificationRate_Environmental_Tutorial/}
+\include{RB_DiversificationRate_Environmental_Tutorial/RB_DiversificationRate_Environmental_Tutorial_content}
+
 \chapter{Diversification Rate Estimation with Missing Taxa}
 \def \ResourcePath {RB_DiversificationRate_Sampling_Tutorial/}
 \include{RB_DiversificationRate_Sampling_Tutorial/RB_DiversificationRate_Sampling_Tutorial_content}
