update bg tutorial

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -286,8 +286,7 @@ Finally, normalize {\tt er\_nat} using a simplex, then pass the resulting exchan
 \begin{snugshade}
 \begin{lstlisting}
 er := simplex(er_nat)
-bf <- simplex(rep(1,n_states))
-q := fnFreeK(er, bf)
+q := fnFreeK(er)
 \end{lstlisting}
 \end{snugshade}
 
@@ -311,7 +310,7 @@ then create the distribution over cladogenic event types and add its MCMC move
 \begin{snugshade}
 \begin{lstlisting}
 clado_type             ~ dnDirichlet(clado_prior)
-mv[++mi]               = mvSimplexElementScale(clado_type, alpha=10, weight=5)
+mv[++mi]               = mvSimplexElementScale(clado_type, weight=5)
 \end{lstlisting}
 \end{snugshade}
 
